fix: I made the Z-index of the taskcard 1000

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@ header {
   background: black;
   border-radius: 0 0.8rem 0.8rem 0;
   border: 1px solid var(--sidepane-border-color);
+  z-index: 1000;
 }
 
 main {
